--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/webpack": "^4.41.25",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "react-hot-loader": "^4.13.0",
     "ts-node": "^9.1.1",
