--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.4.1",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "react-hot-loader": "^4.13.0",
     "ts-node": "^9.1.1",
