--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
 		"jsx": "react",
         "allowJs": true,
         "esModuleInterop": true,
-		"moduleResolution": "node",
-		"sourceMap": true
+		"moduleResolution": "node"
 	}
 }
