--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,10 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn", { "ignoreRestSiblings": true }
+    ]
   },
   "settings": {
     "react": {
