--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@material-ui/icons": "^4.11.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-spring": "9.0.0-rc.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
