--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-measure": "^2.5.2",
     "react-router-dom": "^5.2.0",
     "react-spring": "9.0.0-rc.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-measure": "^2.0.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
