--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"outDir": "./build/",
+		"sourceMap": true,
 		"noImplicitAny": true,
 		"target": "es5",
 		"lib": ["es5", "es6", "dom"],
