--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "clsx": "^1.1.1",
-    "lamejs": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fast-compare": "^3.2.0",
     "react-measure": "^2.5.2",
     "react-router-dom": "^5.2.0",
     "react-spring": "9.0.0-rc.3"
