--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 		"jsx": "react",
         "allowJs": true,
         "esModuleInterop": true,
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"strict": true
 	}
 }
 
