--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "allowJs": true,
         "esModuleInterop": true,
 		"moduleResolution": "node",
+		"downlevelIteration": true,
 		"strict": true
 	}
 }
