--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "react-dom": "^17.0.1",
     "react-fast-compare": "^3.2.0",
     "react-measure": "^2.5.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-spring": "9.0.0-rc.3"
+    "react-spring": "9.0.0-rc.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-measure": "^2.0.6",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
@@ -42,6 +46,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "react-hot-loader": "^4.13.0",
+    "redux-devtools-extension": "^2.13.9",
     "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
