--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "clsx": "^1.1.1",
+    "nanoid": "^3.1.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-fast-compare": "^3.2.0",
