--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-spring": "9.0.0-rc.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "use-debounce": "^6.0.0"
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.7",
