--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"sourceMap": true,
 		"noImplicitAny": true,
 		"target": "es5",
-		"lib": ["es5", "es6", "dom"],
+		"lib": ["ES2019", "DOM"],
 		"module": "ESNext",
 		"jsx": "react",
         "allowJs": true,
