--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js --hot",
     "build": "webpack --mode production --config webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config config/jest/jest.config.ts",
+    "test:db": "jest --runInBand --config config/jest/jest.db.config.ts"
   },
   "author": "",
   "license": "ISC",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.7",
+    "@types/jest": "^26.0.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-measure": "^2.0.6",
@@ -47,11 +49,14 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.4.1",
+    "fake-indexeddb": "^3.1.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
+    "jest": "^26.6.3",
     "react-hot-loader": "^4.13.0",
     "redux-devtools-extension": "^2.13.9",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
