--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^1.1.1",
     "dexie": "^3.0.3",
     "nanoid": "^3.1.21",
+    "notistack": "^1.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-fast-compare": "^3.2.0",
