--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "awesome-typescript-loader": "^5.2.1",
+    "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
