--- a/config/typescript/tsconfig.prod.json
+++ b/config/typescript/tsconfig.prod.json
@@ -1,15 +1,16 @@
 {
 	"compilerOptions": {
-		"outDir": "./build/",
+		"outDir": "../../build/",
 		"sourceMap": true,
 		"noImplicitAny": true,
 		"target": "ES6",
 		"lib": ["ES2019", "DOM"],
 		"module": "CommonJS",
 		"jsx": "react",
-        "allowJs": true,
         "esModuleInterop": true,
 		"moduleResolution": "node",
 		"strict": true
-	}
+	},
+    "include": ["../../src/**/*"],
+	"exclude": ["../../src/**/*.test.ts"]
 }
