--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "repository": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js --hot",
-    "build": "webpack --mode production --config webpack.prod.js",
+    "start": "webpack serve --config config/webpack/webpack.dev.js --hot",
+    "clean": "rimraf build",
+    "build:prod": "webpack --mode production --config config/webpack/webpack.prod.js",
+    "build": "npm run clean && npm run build:prod",
     "test": "jest --config config/jest/jest.config.ts",
     "test:db": "jest --config config/jest/jest.db.config.ts"
   },
@@ -57,11 +59,13 @@
     "jest": "^26.6.3",
     "react-hot-loader": "^4.13.0",
     "redux-devtools-extension": "^2.13.9",
+    "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
+    "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1"
   }
