--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:prod": "webpack --mode production --config config/webpack/webpack.prod.js",
     "build": "npm run clean && npm run build:prod",
     "test": "jest --config config/jest/jest.config.ts",
-    "test:db": "jest --config config/jest/jest.db.config.ts"
+    "test:db": "jest --config config/jest/jest.db.config.ts",
+    "reset": "rimraf node_modules && rm package-lock.json"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "cassette-js": "git+ssh://git@github.com:lawrence-witt/cassette-js.git",
     "clsx": "^1.1.1",
     "dexie": "^3.0.3",
     "nanoid": "^3.1.21",
@@ -29,7 +31,7 @@
     "react-measure": "^2.5.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-spring": "9.0.0-rc.3",
+    "react-spring": "npm:@react-spring/web@^9.0.0-rc.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
@@ -46,7 +48,6 @@
     "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
-    "awesome-typescript-loader": "^5.2.1",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
@@ -62,6 +63,7 @@
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
+    "ts-loader": "^9.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
