--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build:prod": "webpack --mode production --config config/webpack/webpack.prod.js",
     "build:analysis": "set BUILD_ENV=analysis && npm run build:prod",
     "test": "jest --config config/jest/jest.config.ts",
-    "test:db": "jest --config config/jest/jest.db.config.ts",
-    "reset": "rimraf node_modules && rm package-lock.json"
+    "test:db": "jest --config config/jest/jest.db.config.ts"
   },
   "author": "",
   "license": "ISC",
